[package]
name = "cargo-cleaner"
version = "0.1.5"
edition = "2021"
authors = ["Yuta Hinokuma <yuta.hinokuma725@gmail.com>"]
license = "MIT"
homepage = "https://github.com/higumachan/cargo-cleaner"
repository = "https://github.com/higumachan/cargo-cleaner"
exclude = ["test-environment/"]
readme = "README.md"
description = "A cross-platform TUI tool to clean up your cargo cache."
categories = ["development-tools", "command-line-interface"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
crossterm = "0.28.1"
num_threads = { version = "0.1.7", features = [] }
num_cpus = "1.16.0"
crossbeam-channel = { version = "0.5.13", features = [] }
dirs = { version = "5.0.1", features = [] }
cargo_toml = "0.20.5"
anyhow = { version = "1.0.89", features = ["backtrace"] }
itertools = "0.13.0"
atomic-wait = "1.1.0"
clap = { version = "4.5.20", features = ["derive"] }
ratatui = { version = "0.29.0", features = ["all-widgets"] }
uuid = { version = "1.10.0", features = ["serde", "v4", "fast-rng"] }

[dev-dependencies]
ratatui = { version = "0.28.1", features = ["all-widgets"] }
crossterm = "0.28.1"
