[package]
name = "ratatui-multi-highlight-table"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui.workspace = true
strum = { version = "0.25.0", features = [] }
unicode-width = "0.1.11"
enum-map = "2.7.3"
state-set = { git = "https://github.com/taiheioki/state-set.git", features = ["derive"] }
uuid.workspace = true
